# sphericalVPR

./: .gitignore  CMakeLists.txt  README.md  main.cpp
header/: OpenSeqSLAM.h  ssmlSeqSLAM.hpp
src/: OpenSeqSLAM.cpp
